--- a/POLI_179_Final_Project_College_Essays.ipynb
+++ b/POLI_179_Final_Project_College_Essays.ipynb
@@ -45,24 +45,20 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 74
+          "height": 38
         },
         "id": "kdx5-VkxpZ5O",
-        "outputId": "1542d4dd-3d25-461a-f5e6-3d340d6a447e"
+        "outputId": "98e9bbfb-69a7-4c76-d162-0f7066940b92"
       },
       "execution_count": null,
       "outputs": [
         {
-          "output_type": "display_data",
           "data": {
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ],
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-3f0b3868-d0ec-4cfe-80bc-593d47936009\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-232a70ba-1610-4a1d-be1e-fae6907bc3db\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-3f0b3868-d0ec-4cfe-80bc-593d47936009\">\n",
+              "     <output id=\"result-232a70ba-1610-4a1d-be1e-fae6907bc3db\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -242,16 +238,13 @@
               "};\n",
               "})(self);\n",
               "</script> "
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
             ]
           },
-          "metadata": {}
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Saving merged_final.csv to merged_final (1).csv\n"
-          ]
+          "metadata": {},
+          "output_type": "display_data"
         }
       ]
     },
@@ -1656,6 +1649,33 @@
     {
       "cell_type": "code",
       "source": [
+        "df.rename(columns = {\n",
+        "    '':'word_'\n",
+        "    'Winning_Competitions':'topic_Winning_Competitions'\n",
+        "    'Math':'topic_Math'\n",
+        "    'AP_Classes':'topic_AP_Classes'\n",
+        "    'Work_And_Goals':'topic_Work_And_Goals'\n",
+        "    'Camping_Swimming':'topic_Camping_Swimming'\n",
+        "    'Social_Anxiety':'topic_Social_Anxiety'\n",
+        "    'Gendered_Activities':'topic_Gendered_Activities'\n",
+        "    'Fashion_Style':'topic_Fashion_Style'\n",
+        "    'Family_Members':'topic_Family_Members'\n",
+        "    'Medical_Experiences':'topic_Medical_Experiences'\n",
+        "    'Helping_Others':'topic_Helping_Others'\n",
+        "    'Despite_Words':'topic_Despite_Words'\n",
+        "    'Latinx_Family_Issues':'topic_Latinx_Family_Issues'\n",
+        "    'Education_Opportunity':'topic_Education_Opportunity'\n",
+        "}, inplace=True)"
+      ],
+      "metadata": {
+        "id": "QvCiRpFwBzcT"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "def construct_synthetic_documents(df):\n",
         "  documents = []\n",
         "  for _, row in df.iterrows():\n",
@@ -1664,6 +1684,15 @@
       ],
       "metadata": {
         "id": "XSuLGOeitQO6"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "2L3HgEA-ByXR"
       },
       "execution_count": null,
       "outputs": []
